fix database issue

--- a/10.2.0/angular/src/app/billing-staff/view-invoice/view-invoice.component.html
+++ b/10.2.0/angular/src/app/billing-staff/view-invoice/view-invoice.component.html
@@ -4,7 +4,7 @@
             <div class="watermark">INVOICE</div>
             <div class="row align-items-center">
                 <div class="col-md-6 clinic-info">
-                    <h2>MedLife Clinic</h2>
+                    <h2>{{hospitalName}}</h2>
                     <p><i class="fas fa-map-marker-alt"></i> 123 Healthcare Avenue, Mumbai</p>
                     <p><i class="fas fa-phone"></i> +91 22 1234 5678</p>
                     <p><i class="fas fa-envelope"></i> info&commat;medlifeclinic.com</p>
