--- a/10.2.0/angular/src/app/deposit/deposit.component.html
+++ b/10.2.0/angular/src/app/deposit/deposit.component.html
@@ -28,10 +28,8 @@
                     <i class="fas fa-search"></i>
                   </button>
                 </div>
-                <input type="text" class="form-control" name="keyword"
-                       [placeholder]="'SearchWithThreeDot' | localize"
-                       [(ngModel)]="keyword"
-                       (keyup.enter)="list()" />
+                <input type="text" class="form-control" name="keyword" [placeholder]="'SearchWithThreeDot' | localize"
+                  [(ngModel)]="keyword" (keyup.enter)="list()" />
               </div>
             </div>
           </div>
@@ -40,10 +38,8 @@
         <div class="card-body table-responsive table-striped table-bordered">
           <div class="primeng-datatable-container">
             <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                     rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
-                     [paginator]="false" [lazy]="true"
-                     [tableStyle]="{ 'min-width': '50rem' }"
-                     (onLazyLoad)="list($event)">
+              rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+              [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
 
               <ng-template pTemplate="header">
                 <tr>
@@ -60,10 +56,16 @@
                   <td>{{ record.patientName }}</td>
                   <td>{{ record.totalCreditAmount }}</td>
                   <td>{{ record.totalDebitAmount }}</td>
-                  <td>{{ record.totalBalance }}</td>
+                  <td>
+                    <p-tag *ngIf="record.totalBalance < 0" [value]="record.totalBalance" severity="danger">
+                    </p-tag>
+
+                    <p-tag *ngIf="record.totalBalance >= 0" [value]="record.totalBalance" severity="success">
+                    </p-tag>
+                  </td>
                   <td>
                     <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                            (click)="rowMenu.toggle($event); selectedRecord = record">
+                      (click)="rowMenu.toggle($event); selectedRecord = record">
                     </button>
                     <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                       <ul class="custom-overlay-menu">
@@ -97,11 +99,10 @@
               <div class="float-sm-right m-auto">
                 <div class="primeng-paging-container">
                   <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                               (onPageChange)="list($event)"
-                               [totalRecords]="primengTableHelper.totalRecordsCount"
-                               [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                               [showCurrentPageReport]="true"
-                               [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true"
+                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
                   </p-paginator>
                 </div>
               </div>
