--- a/10.2.0/angular/src/app/doctors/edit-visit/edit-visit.component.html
+++ b/10.2.0/angular/src/app/doctors/edit-visit/edit-visit.component.html
@@ -18,11 +18,11 @@
 
         <!-- Department and nurse -->
         <div class="row mt-3">
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <label><b>Select Department</b></label>
                 <p-select [(ngModel)]="visit.departmentId" name="departmentId" [options]="departments"
                     optionLabel="name" optionValue="id" placeholder="Select department" class="w-100" required />
-            </div>
+            </div> -->
             <div class="col-md-6">
                 <label><b>Select Nurse</b></label>
                 <p-select [(ngModel)]="visit.nurseId" name="nurseId" [options]="nurse" optionLabel="fullName"
