--- a/10.2.0/angular/src/app/master-table/createupdate-health-package/createupdate-health-package.component.html
+++ b/10.2.0/angular/src/app/master-table/createupdate-health-package/createupdate-health-package.component.html
@@ -1,72 +1,44 @@
 <form class="form-horizontal" autocomplete="off" #healthPackageForm="ngForm" (ngSubmit)="save()">
-  <abp-modal-header [title]="id ? 'Edit Health Package' : 'Create Health Package'" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
+  <abp-modal-header [title]="id ? 'Edit Health Package' : 'Create Health Package'"
+    (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
   <div class="modal-body">
-    <div class="row g-2">
-      <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-8">
         <label for="packageName"><b>Package Name</b></label>
-        <input
-          pInputText
-          id="packageName"
-          name="packageName"
-          class="form-control"
-          required
-          maxlength="200"
-          [(ngModel)]="healthPackage.packageName"
-        />
+        <input pInputText id="packageName" name="packageName" class="form-control" required maxlength="200"
+          placeholder="Package name" [(ngModel)]="healthPackage.packageName" />
       </div>
-
-      <div class="col-md-12 mt-2">
-        <label for="description"><b>Description</b></label>
-        <textarea
-          id="description"
-          name="description"
-          class="form-control"
-          rows="3"
-          [(ngModel)]="healthPackage.description"
-        ></textarea>
-      </div>
-
-      <div class="col-md-6 mt-2">
+      <div class="col-md-4">
         <label for="packagePrice"><b>Price</b></label>
-        <input
-          pInputText
-          type="number"
-          id="packagePrice"
-          name="packagePrice"
-          class="form-control"
-          min="0"
-          step="0.01"
-          [(ngModel)]="healthPackage.packagePrice"
-        />
+        <input pInputText type="number" id="packagePrice" name="packagePrice" class="form-control" min="0" step="0.01"
+          [(ngModel)]="healthPackage.packagePrice" />
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-10">
+        <label><b>Select Report Types</b></label>
+        <p-multiSelect [options]="labReportsTypesOptions" optionLabel="reportType" optionValue="id"
+          [(ngModel)]="selectedLabReportTypeIds" name="labReportsTypes" display="chip" placeholder="Select report types"
+          styleClass="w-100">
+        </p-multiSelect>
       </div>
 
-      <div class="col-md-6 mt-2 d-flex align-items-center">
+      <div class="col-md-2 d-flex align-items-center">
         <div class="form-check mt-2">
-          <input type="checkbox" class="form-check-input" id="isActive" name="isActive" [(ngModel)]="healthPackage.isActive" />
+          <input type="checkbox" class="form-check-input" id="isActive" name="isActive"
+            [(ngModel)]="healthPackage.isActive" />
           <label class="form-check-label" for="isActive">Active</label>
         </div>
       </div>
-
-      <div class="col-md-12 mt-3">
-        <label><b>Select Report Types</b></label>
-        <p-multiSelect
-          [options]="labReportsTypesOptions"
-          optionLabel="reportType"
-          optionValue="id"
-          [(ngModel)]="selectedLabReportTypeIds"
-          name="labReportsTypes"
-          display="chip"
-          placeholder="Select report types"
-          styleClass="w-100"
-        >
-        </p-multiSelect>
+    </div>
+    <div class="row  mt-3">
+      <div class="col-md-12">
+        <label for="description"><b>Description</b></label>
+        <textarea id="description" name="description" class="form-control" rows="3"
+          [(ngModel)]="healthPackage.description"></textarea>
       </div>
     </div>
   </div>
-
-  <abp-modal-footer
-    [cancelDisabled]="saving"
-    [saveDisabled]="!isFormValid || saving"
-    (onCancelClick)="bsModalRef.hide()"
-  ></abp-modal-footer>
+  <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
+    (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
 </form>
