--- a/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
@@ -38,10 +38,15 @@
 
     <!-- Diagnosis -->
     <div class="row mt-3">
-      <div class="col-md-12 d-flex flex-column">
+      <div class="col-md-6 d-flex flex-column">
         <label>Diagnosis</label>
         <input type="text" pInputText [(ngModel)]="prescription.diagnosis" name="diagnosis" required
           placeholder="Enter diagnosis" />
+      </div>
+      <div class="col-md-6" *ngIf="isAdmin">
+        <label for="doctorSelect">Select Doctor</label>
+        <p-select id="doctorSelect" [(ngModel)]="prescription.doctorId" [optionValue]="'id'" name="doctorId"
+          [options]="doctors" optionLabel="fullName" placeholder="Select doctor" class="w-100" required />
       </div>
     </div>
 
@@ -98,9 +103,9 @@
               (onChange)="onMedicineChange(item, i)">
             </p-dropdown>
             <!-- Dosage Dropdown -->
-            <p-dropdown appendTo="self" *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]" [(ngModel)]="item.dosage"
-              [options]="getDosageOptions(item.medicineName)" optionLabel="label" optionValue="value"
-              placeholder="Dosage" class="w-25 mr-2" name="itemDosage{{i}}">
+            <p-dropdown appendTo="self" *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
+              [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)" optionLabel="label"
+              optionValue="value" placeholder="Dosage" class="w-25 mr-2" name="itemDosage{{i}}">
             </p-dropdown>
             <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text" pInputText
               [(ngModel)]="item.dosage" name="itemDosage{{i}}" class="w-25 mr-2" placeholder="Dosage" />
