--- a/10.2.0/angular/src/app/lab-technician/test-requests/test-requests.component.html
+++ b/10.2.0/angular/src/app/lab-technician/test-requests/test-requests.component.html
@@ -120,7 +120,7 @@
                                 <tr>
                                     <td>
                                         <span>
-                                            {{ record.patientName }}
+                                            {{ record.patientName || "unknown"}}
                                         </span>
                                     </td>
                                     <!-- <td>
