--- a/10.2.0/angular/src/app/doctors/patient/patient.component.html
+++ b/10.2.0/angular/src/app/doctors/patient/patient.component.html
@@ -5,12 +5,12 @@
                 <div class="col-6">
                     <h1>Patients</h1>
                 </div>
-                <div class="col-6 text-right">
+                <!-- <div class="col-6 text-right">
                     <a href="javascript:;" class="btn bg-blue" (click)="showCreatePatientDialog()">
                         <i class="fa fa-plus-square"></i>
                         {{ 'Create' | localize }}
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
