--- a/10.2.0/angular/src/app/lab-technician/edit-lab-technician/edit-lab-technician.component.html
+++ b/10.2.0/angular/src/app/lab-technician/edit-lab-technician/edit-lab-technician.component.html
@@ -4,7 +4,8 @@
     <label class="col-md-3 col-form-label">Gender</label>
     <div class="col-md-9">
       <div *ngFor="let gender of genders" class="form-check form-check-inline">
-        <input class="form-check-input" type="radio"
+        <input class="form-check-input"
+               type="radio"
                name="gender"
                [id]="'gender_' + gender"
                [value]="gender"
@@ -18,7 +19,8 @@
     </div>
   </div>
 
-    <div class="form-group row required">
+  <!-- Qualification -->
+  <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="qualification">Qualification</label>
     <div class="col-md-9">
       <input type="text" id="qualification" name="qualification"
@@ -32,7 +34,8 @@
     </div>
   </div>
 
-   <div class="form-group row required">
+  <!-- Years of Experience -->
+  <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="experience">Years of Experience</label>
     <div class="col-md-9">
       <input type="number" id="experience" name="experience"
@@ -46,24 +49,32 @@
     </div>
   </div>
 
+  <!-- Department (Dropdown like Doctor form) -->
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="department">Department</label>
     <div class="col-md-9">
-      <input type="text" id="department" name="department"
-             class="form-control"
-             required
-             [(ngModel)]="technicianData.department"
-             (ngModelChange)="onInputChange()"
-             #departmentModel="ngModel"
-             #departmentEl>
+      <select id="department"
+              name="departmentId"
+              class="form-control"
+              required
+              [(ngModel)]="technicianData.departmentId"
+              (ngModelChange)="onInputChange()"
+              #departmentModel="ngModel"
+              #departmentEl>
+        <option [ngValue]="null" disabled>-- Select Department --</option>
+        <option *ngFor="let dept of departments" [value]="dept.id">
+          {{ dept.departmentName }}
+        </option>
+      </select>
       <abp-validation-summary [control]="departmentModel" [controlEl]="departmentEl"></abp-validation-summary>
     </div>
   </div>
 
-    <div class="form-group row required">
+  <!-- Certification Number -->
+  <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="registration">Certification Number</label>
     <div class="col-md-9">
-      <input type="text" id="registration" name="registration"
+      <input type="text" id="registration" name="certificationNumber"
              class="form-control"
              required
              [(ngModel)]="technicianData.certificationNumber"
@@ -74,13 +85,14 @@
     </div>
   </div>
 
-   <!-- Date of Birth -->
+  <!-- Date of Birth -->
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="dob">Date of Birth</label>
     <div class="col-md-9">
-      <input type="date" id="dob" name="dob"
+      <input type="date" id="dob" name="dateOfBirth"
              class="form-control"
              required
+             [max]="maxDate"
              [(ngModel)]="technicianData.dateOfBirth"
              (ngModelChange)="onInputChange()"
              #dobModel="ngModel"
@@ -88,5 +100,4 @@
       <abp-validation-summary [control]="dobModel" [controlEl]="dobEl"></abp-validation-summary>
     </div>
   </div>
-
 </form>
