--- a/10.2.0/angular/src/app/master-table/department/department.component.html
+++ b/10.2.0/angular/src/app/master-table/department/department.component.html
@@ -33,6 +33,7 @@
               <ng-template pTemplate="header">
                 <tr>
                   <th style="min-width: 150px">Name</th>
+                  <th style="min-width: 150px">Department Type</th>
                   <th style="min-width: 150px">IsActive</th>
                   <th style="min-width: 130px">Actions</th>
                 </tr>
@@ -40,6 +41,7 @@
               <ng-template pTemplate="body" let-department>
                 <tr>
                   <td>{{ department.departmentName }}</td>
+                  <td>{{ department.departmentType==0?'Doctor':'Lab Technician' }}</td>
                   <td>{{ department.isActive==1?'Yes':'No' }}</td>
                   <td>
                     <button class="btn btn-sm btn-primary mr-2" (click)="editDepartment(department)">
