--- a/10.2.0/angular/src/app/nurse/assigned-patients/assigned-patients.component.html
+++ b/10.2.0/angular/src/app/nurse/assigned-patients/assigned-patients.component.html
@@ -5,12 +5,12 @@
                 <div class="col-6">
                     <h1>{{ 'Assigned Patient' | localize }}</h1>
                 </div>
-                <div class="col-6 text-right">
+                <!-- <div class="col-6 text-right">
                     <a href="javascript:;" class="btn bg-blue">
                         <i class="fa fa-plus-square"></i>
                         {{ 'Create' | localize }}
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
